# rhythm-vibe-mcp

./: .cursorrules  .env.example  .gitignore  AGENTS.md  README.md  le.txt  pyproject.toml
.cursor/: mcp.json
.github/workflows/: pages.yml
docs/: ARCHITECTURE.md  TEST_EVALUATION.md  VISION_AND_SPECIFICATION.md
docs/skills/: cloud_agent_starter.md
src/lilycode_mcp/: __main__.py  abc_constants.py  abc_patterns.py  api_response_keys.py  app_defaults.py  binary_names.py  chord_quality_map.py  chordpro_directives_map.py  cli.py  cli_constants.py  composer.py  content_type_map.py  conversion_graph.py  converter_messages.py  converters.py  duration_readable_map.py  encoding_constants.py  env_constants.py  escape_sequences.py  fallback_messages.py  fallbacks.py  format_ext_map.py  http_constants.py  instrument_clef_map.py  instrument_midi_map.py  json_constants.py  lilypond_constants.py  limits_constants.py  models.py  musescore.py  musescore_constants.py  path_constants.py  pitch_constants.py  server.py  server_constants.py  slugify_constants.py  utils.py  web_fetch.py
src/rhythm_vibe_mcp/: __init__.py  __main__.py  audio_analysis.py  audio_to_midi.py  batch_audio_converter.py  cli.py  composer.py  conversion_graph.py  converter_messages.py  converters.py  fallbacks.py  models.py  runtime_enums.py  server.py  spaces_sync.py  theory_primitives.py  utils.py  webui.py
src/rhythm_vibe_mcp/constants/: __init__.py  abc.py  binaries.py  chord_qualities.py  chordpro_directives.py  clefs.py  cli.py  content_types.py  defaults.py  durations.py  encodings.py  env.py  escapes.py  fallback_msgs.py  formats.py  http.py  json.py  lilypond.py  limits.py  midi_instruments.py  musescore.py  paths.py  pitches.py  response_keys.py  server.py  slugify.py
src/rhythm_vibe_mcp/integrations/: __init__.py  musescore.py  web.py
src/rhythm_vibe_mcp/parsers/: __init__.py  abc_parser.py  abc_patterns.py  chordpro_parser.py
src/rhythm_vibe_mcp/services/: __init__.py  app_services.py  catalog.py  pipeline.py
src/rhythm_vibe_mcp/theory/: __init__.py  chord.py  events.py  ingestion.py  legacy.py  pitch.py  progression.py  project.py  rhythm.py  scale.py  transforms.py
tests/: __init__.py  conftest.py  test_cli.py  test_converters.py  test_fallbacks.py  test_mcp_integration.py  test_models.py  test_musescore.py  test_server_tools.py  test_theory.py  test_utils.py  test_web_fetch.py
