[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lilycode-mcp"
version = "0.1.0"
description = "MCP server for music vibe coding with LilyPond and robust fallbacks."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "mcp[cli]>=1.12.0",
  "pydantic>=2.8.0",
  "httpx>=0.27.0",
  "python-dotenv>=1.0.1",
  "music21>=9.1.0",
]

[project.optional-dependencies]
audio = [
  "basic-pitch>=0.4.0",
]
scrape = [
  "beautifulsoup4>=4.12.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=4.1.0",
]

[project.scripts]
lilycode-mcp = "lilycode_mcp.server:main"
mcp-rhythm-vibe = "lilycode_mcp.server:main"
lilycode-mcp-cli = "lilycode_mcp.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
minversion = "8.0"
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"
markers = [
  "integration: marks tests that require external binaries or network (deselect with '-m \"not integration\"')",
  "slow: marks slow tests (deselect with '-m \"not slow\"')",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore:.*is not well-formed.*:music21.musicxml.m21ToXml.MusicXMLWarning",
]
